# AI_Trip_Planner

./: .env.example  .gitignore  API.md  AWS_DEPLOYMENT_GUIDE.md  DEPLOYMENT.md  DEVELOPMENT.md  OPTIMIZATION_SUMMARY.md  PHASE_4_COMPLETION_REPORT.md  PHASE_5_COMPLETION_REPORT.md  README.md  SETUP.md  frontend_integration.md  log_viewer.py  main.py  pyproject.toml  requirements.txt  setup.py  start_server.ps1  vercel.json
frontend/: .env.development  .env.production  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/travel/: DestinationCard.tsx  ExportMenu.tsx  HeroSection.tsx  PopularDestinations.tsx  QueryHistory.tsx  QuotaDisplay.tsx  RateLimitDialog.tsx  TravelFeatures.tsx  TravelPlannerForm.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useQueryHistory.ts
frontend/src/lib/: quota.ts
frontend/src/pages/: Index.tsx
frontend/src/services/: api.ts
frontend/src/types/: travel.ts
logger/: README.md  __init__.py  analysis.py  logger_config.py  utils.py
prompt_library/: prompt.py
utils/: model_loader.py
